clusters/belacca-production/dex/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dex-traffic
  namespace: dex
  labels:
    belacca.com/stage: native-production
    belacca.com/project: platform
    belacca.com/component: identity
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dex
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - ipBlock:
            cidr: 169.58.143.41/32
        - ipBlock:
            cidr: 169.58.143.42/32
        - ipBlock:
            cidr: 10.42.0.0/24
        - ipBlock:
            cidr: 10.42.1.0/24
      ports:
        - protocol: TCP
          port: 5556
